# mvlite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh
.github/workflows/: build-binaries.yml  release.yml
npm/movelite/: README.md  package.json
npm/mvlite/: README.md  package.json
scripts/: build-npm-package.sh  publish-local.sh  publish-npm.sh  publish-platform.sh
src/: main.rs  server.rs  session_wrapper.rs
test/: debug-requests.ts  integration.ts  package-lock.json  package.json  run.ts
