[package]
name = "mvlite"
version = "0.1.0"
edition = "2021"
description = "Lightweight Move VM for local development — anvil-like experience for Movement L1"
license = "Apache-2.0"

[dependencies]
aptos-transaction-simulation-session = { path = "../.aptos-core/aptos-move/aptos-transaction-simulation-session" }
aptos-transaction-simulation = { workspace = true }
aptos-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-api-types = { workspace = true }
move-core-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
url = { workspace = true }
urlencoding = "2"
bcs = { workspace = true }
hex = { workspace = true }
